<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteOilCollection</string>
    <string name="action_settings">Settings</string>
    <string name="sMethodPrompt">Method</string>
     <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="manifest">Manifest</string>
    <string name="genFac">Generator Name</string>
    <string name="type">Type</string>
    <string name="GenName">Generator Name</string>
    <string name="genAddr">Generator Address</string>
    <string name="totIKG">Total IKG </string>
    <string name="typeIKG">Type Coll</string>
    <string name="method">Method</string>
    <string name="recFacility">Rec Facility Name</string>
    <string name="contCap">Container Capacity</string>
    <string name="fill">% Fill</string>
    <string name="transName">Transporter Name</string>
    <string name="transSig">Driver Signature</string>
    <string name="genRep">Generator Rep. Name</string>
    <string name="genSig">Generator Signature</string>
   <string name="Comments">Comments</string>

</resources>